organized HTML code and CSS code and fixed a bug when button goes to the next line when resizing the screen and not aligned with the input log and the time display

--- a/style.css
+++ b/style.css
@@ -1,13 +1,47 @@
 * {
     box-sizing: border-box;
 }
+body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 
 #wrapper {
-    margin-left: auto;
-    margin-right: auto;
     width: 100%;
+    margin: auto;
+    padding: auto;
 }
 
 h1 {
     text-align: center;
+}
+
+.time-display {
+    width: 12%; 
+    height: 75px; 
+    border-style: dashed; 
+    border-width: 1%; 
+    justify-content: center;
+    align-items: center;
+    text-align: center; 
+    float: left; 
+    font-size: 20px;
+}
+
+.user-input {
+    width: 78%;
+    height: 75px;
+    padding-bottom: 15px;
+    float: left; 
+    background-color:beige;
+    color:rgb(219, 30, 30);
+}
+
+button {
+    width: 10%;
+    height: 75px;
+    border-bottom-right-radius: 25px; 
+    border-top-right-radius: 25px;
+    background-color: rgb(15, 144, 15);
 }
